--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,22 @@ npm-debug.log
 yarn-error.log
 /vendor
 resources/assets/config-local.json
+
+# Only version yarn.lock
+package-lock.json
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
