--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,15 @@
     "composer/installers": "~1.9",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
-    "soberwp/controller": "~2.1.0"
+    "soberwp/controller": "~2.1.0",
+    "stoutlogic/acf-builder": "^1.11",
+    "log1x/blade-svg-sage": "^2.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
-    "roots/sage-installer": "~1.6"
+    "roots/sage-installer": "~1.6",
+    "php-stubs/wordpress-stubs": "^5.7",
+    "paulthewalton/acf-stubs": "^5.8"
   },
   "scripts": {
     "test": ["phpcs"],
