--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,18 @@
 {
-  "name": "roots/sage",
+  "name": "stirlingbrandworks/slab",
   "type": "wordpress-theme",
-  "license": "MIT",
   "description": "WordPress starter theme with a modern development workflow",
-  "homepage": "https://roots.io/sage/",
+  "homepage": "https://github.com/stirling-brandworks/slab/",
   "authors": [
     {
-      "name": "Ben Word",
-      "email": "ben@benword.com",
-      "homepage": "https://github.com/retlehs"
-    },
-    {
-      "name": "Scott Walkinshaw",
-      "email": "scott.walkinshaw@gmail.com",
-      "homepage": "https://github.com/swalkinshaw"
-    },
-    {
-      "name": "QWp6t",
-      "email": "hi@qwp6t.me",
-      "homepage": "https://github.com/qwp6t"
+      "name": "Brian Hanna",
+      "email": "brian@stirlingbrandworks.com",
+      "homepage": "https://github.com/brianjohnhanna"
     }
   ],
   "keywords": ["wordpress"],
   "support": {
-    "issues": "https://github.com/roots/sage/issues",
-    "forum": "https://discourse.roots.io/"
+    "issues": "https://github.com/stirling-brandworks/slab/issues"
   },
   "autoload": {
     "psr-4": {
