--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "sage",
+  "name": "slab",
   "version": "9.0.10",
-  "author": "Roots <team@roots.io>",
-  "homepage": "https://roots.io/sage/",
+  "author": "Stirling Brandworks <hello@stirlingbrandworks.com>",
+  "homepage": "https://github.com/stirling-brandworks/slab/",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/roots/sage.git"
+    "url": "git@github.com:stirling-brandworks/slab.git"
   },
   "bugs": {
-    "url": "https://github.com/roots/sage/issues"
+    "url": "https://github.com/stirling-brandworks/slab/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
   "browserslist": [
     "last 2 versions",
     "android 4",
