--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "stirlingbrandworks/slab",
+  "name": "stirling-brandworks/slab",
   "type": "wordpress-theme",
   "description": "WordPress starter theme with a modern development workflow",
   "homepage": "https://github.com/stirling-brandworks/slab/",
