--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -1,20 +1,12 @@
 {
   "entry": {
-    "main": [
-      "./scripts/main.js",
-      "./styles/main.scss"
-    ],
-    "customizer": [
-      "./scripts/customizer.js"
-    ]
+    "main": ["./scripts/main.js", "./styles/main.scss"],
+    "customizer": ["./scripts/customizer.js"],
+    "admin": ["./scripts/admin.js"]
   },
   "publicPath": "/wp-content/themes/slab",
   "devUrl": "http://example.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
-  "watch": [
-    "app/**/*.php",
-    "config/**/*.php",
-    "resources/views/**/*.php"
-  ]
+  "watch": ["app/**/*.php", "config/**/*.php", "resources/views/**/*.php"]
 }
