--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "extract-text-webpack-plugin": "~3.0.2",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "husky": "^6.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "import-glob": "~1.5",
@@ -70,12 +71,12 @@
     "webpack-dev-middleware": "~2.0.4",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-merge": "~4.1.4",
-    "yargs": "^16.1.0",
-    "husky": "^6.0.0"
+    "yargs": "^16.1.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "swiper": "^6.8.0"
   }
 }
