--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -4,7 +4,7 @@
     "customizer": ["./scripts/customizer.js"]
   },
   "publicPath": "/wp-content/themes/slab",
-  "devUrl": "http://example.local",
+  "devUrl": "http://example.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": ["app/**/*.php", "config/**/*.php", "resources/views/**/*.php"]
