--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.14.0",
     "extract-text-webpack-plugin": "~3.0.2",
-    "file-loader": "^6.2.0",
+    "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "husky": "^6.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "import-glob": "~1.5",
     "node-sass": "^5.0.0",
-    "postcss-loader": "^4.0.4",
-    "postcss-safe-parser": "^5.0.2",
-    "resolve-url-loader": "^3.1.2",
+    "postcss-loader": "~2.1.0",
+    "postcss-safe-parser": "~3.0",
+    "resolve-url-loader": "~2.3.1",
     "rimraf": "^3.0.2",
     "sass-loader": "~6.0",
     "style-loader": "^0.23.1",
@@ -65,7 +65,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^4.1.1",
+    "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-dev-middleware": "~2.0.4",
