--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sass-loader": "~6.0",
     "style-loader": "^0.23.1",
     "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
