--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.28.11",
     "cssnano": "^4.0.5",
     "eslint": "~4.19.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.14.0",
     "extract-text-webpack-plugin": "~3.0.2",
@@ -62,6 +63,7 @@
     "sass-loader": "~6.0",
     "style-loader": "^0.23.1",
     "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
