Update default PHP formatter for VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "[php]": {
     "editor.formatOnSave": true,
     "editor.insertSpaces": true,
+    "editor.defaultFormatter": "valeryanm.vscode-phpsab"
   },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
