Add postinstall command to copy *-example.yml files to slab

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
     ],
     "post-create-project-cmd": [
       "App\\Installer\\ComposerScript::postCreateProject"
+    ],
+    "post-install-cmd": [
+      "App\\Installer\\ComposerScript::copyPluginConfigs"
     ]
   }
 }
