--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": ">=8.0.0",
+    "node": "^12.0.0",
     "npm": "please-use-yarn",
     "yarn": ">= 1.19.1"
   },
