--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "postcss-safe-parser": "^5.0.2",
     "resolve-url-loader": "^3.1.2",
     "rimraf": "^3.0.2",
-    "sass": "1.32.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
@@ -74,10 +73,12 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "autoprefixer": "^10.0.1",
     "bootstrap": "^5.0.2",
     "buble": "^0.20.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "stylelint-config-prettier": "^9.0.3",
