--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "yarn": ">= 1.19.1"
   },
   "devDependencies": {
+    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
     "autoprefixer": "^9.0.0",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
     "bs-html-injector": "~3.0",
     "buble": "^0.20.0",
     "buble-loader": "^0.5.1",
-    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-globs-webpack-plugin": "^0.3.0",
     "css-loader": "^5.0.1",
@@ -80,6 +80,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "copy-webpack-plugin": "^9.0.1",
     "swiper": "^6.8.0"
   }
 }
