--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@soda/friendly-errors-webpack-plugin": "^1.8.0",
-    "autoprefixer": "^9.0.0",
+    "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
     "bs-html-injector": "~3.0",
@@ -57,6 +57,7 @@
     "import-glob": "~1.5",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^6.0.1",
+    "postcss": "^8.3.11",
     "postcss-loader": "^4.0.4",
     "postcss-safe-parser": "^5.0.2",
     "prettier": "^2.4.1",
