--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -6,6 +6,6 @@
   "publicPath": "/wp-content/themes/slab",
   "devUrl": "http://example.test",
   "proxyUrl": "http://localhost:3000",
-  "cacheBusting": "[name]_[hash:8]",
+  "cacheBusting": "[name]_[fullhash:8]",
   "watch": ["app/**/*.php", "config/**/*.php", "resources/views/**/*.php"]
 }
