--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": ">=12.0.0",
+    "node": "^16",
     "npm": "please-use-yarn",
     "yarn": ">= 1.19.1"
   },
@@ -41,14 +41,15 @@
     "bs-html-injector": "~3.0",
     "buble": "^0.20.0",
     "buble-loader": "^0.5.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-globs-webpack-plugin": "^0.3.0",
-    "css-loader": "^5.0.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "cssnano": "^4.0.5",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-webpack-plugin": "^2.4.1",
+    "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "husky": "^7.0.4",
@@ -68,8 +69,8 @@
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-webpack-plugin": "^2.1.1",
-    "url-loader": "^4.1.1",
+    "stylelint-webpack-plugin": "^3.0.1",
+    "url-loader": "0.6.2",
     "webpack": "^5.11.1",
     "webpack-assets-manifest": "^5.0.0",
     "webpack-cli": "^4.3.0",
@@ -81,7 +82,6 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
-    "copy-webpack-plugin": "^9.0.1",
     "swiper": "^6.8.0"
   }
 }
