--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^3.0.1",
-    "url-loader": "0.6.2",
+    "url-loader": "^0.6.2",
     "webpack": "^5.11.1",
     "webpack-assets-manifest": "^5.0.0",
     "webpack-cli": "^4.3.0",
