--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   ],
   "scripts": {
     "build": "webpack --progress --config resources/assets/build/webpack.config.js",
-    "build:production": "webpack --env.production --progress --config resources/assets/build/webpack.config.js",
+    "build:production": "webpack --mode=production --progress --config resources/assets/build/webpack.config.js",
     "build:profile": "webpack --progress --profile --json --config resources/assets/build/webpack.config.js",
-    "start": "webpack --hide-modules --watch --config resources/assets/build/webpack.config.js",
+    "start": "webpack --watch --config resources/assets/build/webpack.config.js",
     "rmdist": "rimraf dist",
     "lint": "npm run -s lint:scripts && npm run -s lint:styles",
     "lint:scripts": "eslint resources/assets/scripts resources/assets/build",
@@ -29,50 +29,52 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": "^12",
+    "node": "^16",
     "npm": "please-use-yarn",
     "yarn": ">= 1.19.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "browser-sync": "^2.26.13",
-    "browsersync-webpack-plugin": "^0.6.0",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "bs-html-injector": "~3.0",
-    "buble-loader": "^0.4.1",
-    "cache-loader": "~1.2.5",
-    "clean-webpack-plugin": "^0.1.18",
-    "copy-globs-webpack-plugin": "^0.2.0",
-    "css-loader": "^0.28.11",
+    "buble": "^0.20.0",
+    "buble-loader": "^0.5.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-globs-webpack-plugin": "^0.3.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "cssnano": "^4.0.5",
-    "eslint": "~4.19.1",
+    "eslint": "^7.16.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.14.0",
-    "extract-text-webpack-plugin": "~3.0.2",
-    "file-loader": "^1.1.6",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "husky": "^6.0.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.2.0",
+    "husky": "^7.0.4",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "import-glob": "~1.5",
-    "node-sass": "^5.0.0",
-    "postcss-loader": "~2.1.0",
-    "postcss-safe-parser": "~3.0",
-    "resolve-url-loader": "~2.3.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^4.0.4",
+    "postcss-safe-parser": "^5.0.2",
+    "prettier": "^2.4.1",
+    "resolve-url-loader": "^3.1.2",
     "rimraf": "^3.0.2",
-    "sass-loader": "~6.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "stylelint-webpack-plugin": "^3.0.1",
     "url-loader": "^0.6.2",
-    "webpack": "~3.10.0",
-    "webpack-assets-manifest": "^1.0.0",
-    "webpack-dev-middleware": "~2.0.4",
+    "webpack": "^5.11.1",
+    "webpack-assets-manifest": "^5.0.0",
+    "webpack-cli": "^4.3.0",
     "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "~4.1.4",
+    "webpack-merge": "^5.7.3",
     "yargs": "^16.1.0"
   },
   "dependencies": {
