--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "import-glob": "~1.5",
     "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^7.0.0",
     "postcss": "^8.3.11",
     "postcss-loader": "^4.0.4",
     "postcss-safe-parser": "^5.0.2",
@@ -80,6 +79,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "sass": "^1.49.9",
     "swiper": "^6.8.0"
   }
 }
